Ui and bugs fixed

--- a/server/upload-service/.env
+++ b/server/upload-service/.env
@@ -1,2 +1,6 @@
-PORT=5003
+PORT=5002                 
 MONGO_URI="mongodb://localhost:27017/thinkCanvas"
+cloud_name=
+api_key=
+api_secret=
+STABILITY_API_KEY=
