--- a/server/subscription-service/.env
+++ b/server/subscription-service/.env
@@ -1,5 +1,5 @@
-PORT=5002
+PORT=5003
 MONGO_URI="mongodb://localhost:27017/thinkCanvas"
 PAYPAL_CLIENT_ID=
 PAYPAL_CLIENT_SECRET=
-FRONTEND_URL=
+FRONTEND_URL="http://localhost:3000"
